# ConSLAM

./: LICENCE.txt  README.md
pp_alvium_driver/: CMakeLists.txt  README.md  open-source-licenses.txt  package.xml  setup.py
pp_alvium_driver/DynamicLib/: info.txt
pp_alvium_driver/calib/: 210719_rgb.yaml  210722_nir_2k.yaml  220314_nir_2point5k.yaml
pp_alvium_driver/launch/: nir_only_python.launch  rgb_only_python.launch
pp_alvium_driver/scripts/: fix_cam_timestamps.py  ros_alvium_nir.py  ros_alvium_rgb.py
pp_alvium_driver/src/pp_alvium_driver/: alvium_driver.py
pp_launcher/: CMakeLists.txt  package.xml
pp_launcher/launch/: 4cam_lidar_testing.launch  4london.launch  4london_nir.launch  record-raw.sh  record4london_all.sh  record4london_noNIR.sh  save_synced_rgb_and_lidar_msgs_outdoors_to_bags.launch  start_rgb_and_lidar_sensors_outdoors.launch
pp_launcher/rviz/: debug.rviz
pp_lidar2cam/: CMakeLists.txt  package.xml  setup.py
pp_lidar2cam/calib/: 220310_nir1.launch  220310_nir2.launch  220310_rgb2cam.launch
pp_lidar2cam/launch/: bag2bags.launch  project_lidar2rgb.launch  sync_nir_with_points.launch  sync_rgb_with_points.launch
pp_lidar2cam/scripts/: pp_img_undistorter.py  projector2.py
pp_lidar2cam/src/: bag2bags.cpp  lidar_cams_synchroniser.cpp
pp_monitor/: CMakeLists.txt  package.xml  setup.py
pp_monitor/launch/: points_imu_rgb_nir.launch
pp_monitor/scripts/: monitor.py  pp_img_undistorter.py  projector2.py
pp_monitor/src/: lidar_cams_synchroniser.cpp
pp_velo/velodyne_driver/: CMakeLists.txt
pp_velo/velodyne_laserscan/: CMakeLists.txt
pp_velo/velodyne_msgs/: CMakeLists.txt
pp_velo/velodyne_pcl/: CMakeLists.txt
pp_velo/velodyne_pointcloud/: CMakeLists.txt  package.xml  setup.py
pp_velo/velodyne_pointcloud/include/velodyne_pointcloud/: pointXYZIRT.h
pp_velo/velodyne_pointcloud/launch/: DEPRECIATED_pp_correct_velo_stamps.launch  cpp_correct_velo_stamps.launch  pp_VLP16_points.launch
pp_velo/velodyne_pointcloud/scripts/: velodyne_timestamp_corrector.py
pp_velo/velodyne_pointcloud/src/: correct_timestamps.cpp
pp_xsens_imu/: CMakeLists.txt  LICENSE.txt  README.md  README.txt  package.xml
pp_xsens_imu/launch/: display.launch  xsens_mti_node.launch
pp_xsens_imu/lib/xspublic/xscommon/: abstractadditionallogger.h  additionalloggerbase.cpp  additionalloggerbase.h  calltracer.h  common_qdebug.h  consolelogger.cpp  consolelogger.h  enumexpandersbase.cpp  enumexpandersbase.dpp  enumexpandersbase.h  extendedenum.h  fwupdate.c  fwupdate.d  fwupdate.h  journalexception.cpp  journalexception.h  journalfile.cpp  journalfile.dpp  journalfile.h  journaller.cpp  journaller.dpp  journaller.h  journalloglevel.h  journalstackwalker.h  journalthreader.cpp  journalthreader.dpp  journalthreader.h  stackdumper.cpp  stackdumper.h  stackwalker.cpp  stackwalker.h  stackwalker_linux.cpp  stackwalker_linux.h  threading.cpp  threading.h  xbus.c  xbus.d  xbus.h  xbusparser.c  xbusparser.d  (+12 more)
pp_xsens_imu/lib/xspublic/xscontroller/: broadcastdevice.cpp  broadcastdevice.dpp  broadcastdevice.h  callbackmanagerxda.cpp  callbackmanagerxda.h  clocksynccommand.h  communicator.cpp  communicator.dpp  communicator.h  communicatorfactory.cpp  communicatorfactory.h  compat.h  datalogger.cpp  datalogger.h  datapacketcache.cpp  datapacketcache.dpp  datapacketcache.h  dataparser.cpp  dataparser.h  datapoller.cpp  datapoller.h  devicecommunicator.cpp  devicecommunicator.dpp  devicecommunicator.h  devicefactory.cpp  devicefactory.dpp  devicefactory.h  deviceredetector.cpp  deviceredetector.dpp  deviceredetector.h  devicetypes.h  dotdevice.cpp  dotdevice.dpp  dotdevice.h  dummy.cpp  enumerateusbdevices.cpp  enumerateusbdevices.dpp  enumerateusbdevices.h  enumexpanders.cpp  enumexpanders.dpp  (+180 more)
pp_xsens_imu/lib/xspublic/xstypes/: datapacket_p.cpp  datapacket_p.dpp  datapacket_p.h  pstdint.h  resource.h  xsanalogindata.h  xsarray.c  xsarray.d  xsarray.h  xsbaud.c  xsbaud.d  xsbaud.h  xsbaudcode.h  xsbaudrate.h  xsbusid.h  xsbytearray.c  xsbytearray.d  xsbytearray.h  xscalibrateddata.c  xscalibrateddata.d  xscalibrateddata.h  xscanbaudcode.h  xscanconfigidentifier.h  xscandataidentifier.h  xscanframeformat.h  xscanoutputconfiguration.c  xscanoutputconfiguration.d  xscanoutputconfiguration.h  xscanoutputconfigurationarray.c  xscanoutputconfigurationarray.d  xscanoutputconfigurationarray.h  xscontrolline.h  xscopy.h  xsdataidentifier.h  xsdataidentifiervalue.h  xsdatapacket.cpp  xsdatapacket.dpp  xsdatapacket.h  xsdatapacketptr.h  xsdatapacketptrarray.c  (+174 more)
pp_xsens_imu/param/: xsens_mti_node.yaml
pp_xsens_imu/rviz/: display.rviz  example.rviz
pp_xsens_imu/src/: main.cpp  xdacallback.cpp  xdacallback.h  xdainterface.cpp  xdainterface.h
pp_xsens_imu/src/messagepublishers/: accelerationpublisher.h  angularvelocitypublisher.h  freeaccelerationpublisher.h  gnsspublisher.h  imupublisher.h  magneticfieldpublisher.h  orientationincrementspublisher.h  orientationpublisher.h  packetcallback.h  positionllapublisher.h  pressurepublisher.h  temperaturepublisher.h  timereferencepublisher.h  transformpublisher.h  twistpublisher.h  velocityincrementpublisher.h  velocitypublisher.h
pp_xsens_imu/urdf/: MTi_1.stl  MTi_1.urdf  MTi_10.urdf  MTi_6xx.urdf
tools/constrained_RMSE/: CLI11.hpp  CMakeLists.txt  main.cpp
tools/pp2evo/: README.md  pp2evo.py
