<?xml version="1.0"?>
<package format="2">
  <name>pp_lidar2cam_projector</name>
  <version>0.0.1</version>
  <description>pp_lidar2cam_projector</description>

  <author>Maciej Trzeciak - University of Cambridge</author>
  <maintainer email="maciej.trzeciak@hotmail.com">Maciej Trzeciak</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag</depend>
  <depend>cv_bridge</depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>image_view</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

</package>
